--- a/sec1/1_15.md
+++ b/sec1/1_15.md
@@ -96,5 +96,9 @@ b. (sine a)の評価で, 手続きsineの生成するプロセスが使うスペ
 
 ## b. (sine a)の評価で, 手続きsineの生成するプロセスが使うスペースとステップ数の増加の程度は(aの関数として)何か.
 
+a が 0.1 以下になるまで 1/3 にし続けている。
+増加量は θ（log_3 n)
 
+pの数は0.1になるまでと同じ数だけ増える。
+スペースは θ（log_3 n)
 
